--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="Harley-Davidson, Street, Sportser, Softail, Trike, Touring, CVO">
 	<meta name="author" content="Zharkevich Ilya">
 	<meta name="description" content="catalog of Harley Davidson motorcycles">
-	<title>Harley-Davidson </title>
+	<title>Harley Davidson </title>
 	<base target="_blank"> </head>
 
 <body>
